made the person charactersheet (/chronicles/person.html?name=Karn) into one of the templates, so we can change the formatting/make the layout nice.